--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .wordmasters {
@@ -14,6 +15,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 32px;
+    text-align: center;
 }
 
 h1 {
@@ -52,7 +54,7 @@ h1 {
 input {
     height: 100%;
     width: 100%;
-    font-size: 32px;
+    font-size: clamp(14px, 6vw, 28px);
     text-align: center;
     border: none;
 }
@@ -67,7 +69,8 @@ input {
 }
 
 .grey {
-    background-color: grey;
+    background-color: #c3c3c3;
+    color: white;
 }
 
 .hidden {
